--- a/img/favicons/manifest.json
+++ b/img/favicons/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "",
+    "name": "12 Guards",
     "icons": [
         {
             "src": "img/favicons/android-chrome-192x192.png",
