--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "gulp-rename": "^1.2.2",
     "gulp-svgmin": "^1.2.4",
     "gulp-svgstore": "^6.1.0",
-    "gulp-uglify": "^3.0.0",
     "gulp-ttf2woff2": "^2.0.2",
+    "gulp-uglify": "^3.0.0",
+    "postcss-object-fit-images": "^1.1.2",
     "run-sequence": "^1.2.2"
   },
   "scripts": {
